# BUT_Telepresence

./: .gitignore  .gitmodules  LICENSE  README.md
VR_App/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  settings.gradle
VR_App/android_resources/drawable/: ic_telepresence_foreground.xml
VR_App/android_resources/opengles/mipmap-anydpi-v26/: ic_telepresence_launcher.xml
VR_App/android_resources/values/: ic_telepresence_colors.xml
VR_App/android_resources/vulkan/mipmap-anydpi-v26/: ic_telepresence_launcher.xml
VR_App/include/: check.h  common.h  config.h  geometry.h  gstreamer_android.h  gstreamer_player.h  linear.h  log.h  ntp_timer.h  pch.h  program.h  render_imgui.h  render_scene.h  render_texplate.h  rest_client.h  robot_control_sender.h  ros_network_gateway_client.h  state_storage.h  util_egl.h  util_openxr.h  util_render_target.h  util_shader.h  xr_timing.h
VR_App/include/types/: app_state.h  camera_types.h  enums.h  gui_setting.h  input_types.h
VR_App/include/utils/: network_utils.h  string_utils.h
VR_App/src/: camera_stats.cpp  gstreamer_android.c  gstreamer_player.cpp  main.cpp  ntp_timer.cpp  program.cpp  render_imgui.cpp  render_scene.cpp  render_texplate.cpp  rest_client.cpp  robot_control_sender.cpp  ros_network_gateway_client.cpp  state_storage.cpp  util_egl.cpp  util_openxr.cpp  util_render_target.cpp  util_shader.cpp
include/: ntp_timer.h  robot_control_sender.h
robot_controller/: TELEMETRY_SETUP.md  config.py  config.yaml  export_telemetry.py  grafana_dashboard_influxdb3.json  relay_service.py  start.sh
robot_controller/robot_translators/: __init__.py  asgard.py  base.py  spot.py
robot_controller/servo_translators/: tg_drives.py
scripts/: camera-server.service  robot-controller.service  telemetry.csv  visualize_telemetry.py  visualize_telemetry_doublehop.py  visualize_telemetry_singlehop.py
server/swagger_server/controllers/: default_controller.py
server/swagger_server/models/: required_stream_configuration.py  stream_configuration.py  stream_state.py  stream_update_body.py
server/swagger_server/swagger/: swagger.yaml
services/: camera-server.service  influxdb3.service
src/: program.cpp  robot_control_sender.cpp
streaming_driver/: CMakeLists.txt  main.cpp
streaming_driver/include/: logging.h  pipelines.h
